Bug #1260 - User Profile Page: Display name not aligned properly with avatar

--- a/wp-content/themes/openlab/style.less
+++ b/wp-content/themes/openlab/style.less
@@ -1307,12 +1307,16 @@ body{
         margin-left: 0;
     }
 }
+#avatar-wrapper{
+    margin-top: 5px;
+}
 #member-header{
-    margin-top: 64px;
+    margin-top: 60px;
     .member-name-title{
         color: #444444;
         font-size: 32px;
         font-weight: 600;
+        margin-top: 0;
     }
     .timestamp{
         .fa{
